# tao-not-42-base-refactor-world-model-contract

./: .gitignore  AGENTS.md  INSTALL.md  INSTALL_REFACTOR.md  SETUP_WSL_SMOKE.md  colab_demo.ipynb  colab_yoloworld.ipynb  gemini.md  install_env.py  prof_throughput.py  pyproject.toml  readme.md  requirements.txt  setup.py  test_a2c_proper.py  test_craftground.py  test_craftground_a2c.py  test_craftground_simple.py  test_craftground_vec.py  transfer.ipynb  xorg.conf.headless
assets/godot_meta_rl/: AGENTS.md  Main.cs  (+25 more)
blocks/: NOTICE.dreamerv3  __init__.py  attention.py  conv.py  decoder.py  distributions.py  dynamics.py  encoder.py  encodings.py  impala.py  mlp.py  modulation.py  primitives.py  quantization.py  regularization.py  residual.py  rl_heads.py  sequence.py  similarity.py  spatial.py  transformer.py  yolo.py
data_pipelines/: README.md
datasets/: README.md  __init__.py
docs/: activity_log.md  next_session.md
knowledge/: README.md  analysis_efficiency_levers.md  arch_current.md  blocks_classification_report.md  claims_and_scope.md  code_analysis.md  code_conventions.md  conclusion_craftground_run.md  conclusion_fasttower_skill_ceiling.md  conclusion_fovea_ceiling_mamba_seed.md  conclusion_g500_gates_probe.md  conclusion_minecraft_dreamer4_run.md  conclusion_omni_nvfp4_5090.md  conclusion_omni_pixel_control.md  conclusion_r2a_divergence_probe.md  crafter_dreamerv3_runbook.md  craftground_replay.md  design_bitter_lesson_map_integration.md  design_direct_action_output.md  design_fovea_yolo_fasttower.md  design_gaming500_consume.md  design_gaming500_hd_pretrain.md  design_learned_attention.md  design_llm_deep_integration.md  design_llm_semantic_layer.md  design_rollout_research_program.md  design_wca_agent.md  dreamer.md  gemma4-unsloth-integration.md  independent-eval-leaderboards-2026.md  install.md  lessons_do_not_retry.md  lumine-agent-recipe.md  mental_world.md  model-benchmarks-vlm-omni.md  net_functions_summary.md  papers_in_use.md  qwen3vl-action-token-probe.md  refactoring_proposal.md  rssm_sf_design.md  (+6 more)
net/: __init__.py  action_model.py  action_token_codec.py  backbone.py  calibration.py  config.py  dino_tokenizer.py  dynamics.py  effect_tokenizer.py  fast_tower_v2.py  gemma4_policy.py  heads.py  latent_world_model.py  map_io.py  minecraft_world_model.py  oracle_heads.py  pixel_tower.py  qwen3vl_policy.py  rssm.py  slots.py  spatiotemporal_fast_tower.py  tao_not_42.py  token_tower.py  world_model.py  world_probe.py  yoloe.py
notebooks/: colab_demo.ipynb  transfer.ipynb
requirements/: all.txt  base.txt  crafter.txt  dev.txt  dreamer.txt  minecraft.txt  ppo-ad.txt  rl.txt
rl_training_environments/: README.md  __init__.py
scripts/: gpu_run.sh  label_loop.sh  sys_monitor.py
tests/: bench_render_craftground.py  convert_gaming500.py  download_sample_data.py  download_vpt_data.py  encode_c2_feats.py  encode_feats.py  encode_g500_feats.py  encode_gaming500_hdf5.py  encode_vpt_feats.py  eval_distill_acceptance.py  eval_hindsight_acceptance.py  eval_teacher_closedloop.py  manifest_gaming500_720p.json  prefetch_gaming500.py  probe_dino_aim.py  probe_dino_vs_yoloe_aim.py  probe_g500_common.py  probe_g500_extract.py  probe_g500_gate0.py  probe_g500_gate0_diag.py  probe_g500_gate12.py  probe_judge_io_haiku.py  probe_mamba_seed.py  probe_omni_minecraft_control.py  probe_omni_minecraft_lumine.py  probe_omni_nvfp4.py  probe_omni_pointing.py  probe_quant_gemm_5090.py  probe_r2a_divergence.py  probe_slow_tower_ab.py  probe_slow_tower_aim.py  probe_sm120_ptx.py  probe_vpt_calib.py  probe_yoloe_coverage.py  probe_yoloe_minecraft.py  probe_yoloe_unified.py  push_checkpoints.py  push_labels.py  run_gaming500_encode.sh  serve_omni_nvfp4.sh  (+3 more)
tools/: download_sample_data.py  oracle_idm.py  test_dinov3_hf.py  view_env.py  vpt_teacher.py
train/: __init__.py  train_action.py  train_action_world.py  train_minecraft.py  train_probe.py  train_world_self_supervised.py
utils/: README.md  __init__.py  config_io.py  data.py  download_sample_data.py  geometry.py  guidance_bus.py  hf_token.py  io.py  losses.py  matching.py  minecraft_viz.py  monitor_training.py  nn.py  probes.py  rhythm_action_env.py  rhythm_env.py  task_text.py  view_env.py  visualization.py  vpt_action.py  vpt_dataset.py
(+432 files in other folders)
