[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tao-not-42"
version = "0.2.0"
description = "Godot 与 CraftGround 世界模型训练环境"
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "accelerate>=1.0",
    "craftground",
    "huggingface-hub>=0.34",
    "numpy",
    "gymnasium",
    "opencv-python-headless",
    "peft>=0.13",
    "pillow",
    "stable-baselines3",
    "torch",
    "torchvision",
    "transformers>=5.5",
    "unsloth",
    "unsloth-zoo",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
train-godot-ppo = "rl_training_environments.godot.train_ppo:main"

[tool.setuptools.packages.find]
include = ["blocks*", "data_pipelines*", "net*", "rl_training_environments*", "train*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["blocks", "data_pipelines", "net", "rl_training_environments", "train"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
